<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1000"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1000"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center"
                android:textColor="#fff"
                android:text="@string/sex"/>
            <RadioGroup
                android:id="@+id/picker_radio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layoutDirection="rtl"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:button="@null"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:checked="false"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/radio_2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layoutDirection="rtl"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:textAlignment="textStart"
                    android:button="@null"
                    android:layout_gravity="start"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:checked="false"
                    android:text="@string/woman" />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center"
                android:textColor="#fff"
                android:text="@string/privacy"/>
            <RadioGroup
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_privacy1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layoutDirection="rtl"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:button="@null"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:checked="false"
                    android:text="@string/open"
                    />

                <RadioButton
                    android:id="@+id/radio_privacy2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layoutDirection="rtl"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:textAlignment="textStart"
                    android:button="@null"
                    android:layout_gravity="start"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:checked="false"
                    android:text="@string/close" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="200"
    android:orientation="vertical">
<!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/name"/>-->
        <EditText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/your_name"
            android:background="@drawable/edit_text" /><!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/second_name"/>-->
        <EditText
            android:id="@+id/surname"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/your_surname"
            android:background="@drawable/edit_text" />
        <EditText
            android:id="@+id/birthday"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/your_birthday"
            android:background="@drawable/edit_text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/about_myself"/>
        <EditText
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="#fff"
            android:gravity="center"
            android:inputType="text"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/interests"/>
        <EditText
            android:id="@+id/interests"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:background="#fff"
            android:inputType="text"
            />

    </LinearLayout>
</LinearLayout>
</ScrollView>