<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/login_panel"
    android:contentDescription="panel for buttons and edittexts">

    <View
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_height="match_parent"
        android:contentDescription="panel side padding" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1400"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:contentDescription="actual layout  for buttons and edittexts">


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:text="@string/enter_code_reg_2"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/sms_code"
            android:layout_weight="80"
            android:inputType="text"
            android:gravity="center"
            android:background="@drawable/edit_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:text="@string/enter_password_reg_3"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="18sp"
            android:id="@+id/panel_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <EditText
            android:id="@+id/password_1_registration_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/enter_password_registration_3"
            android:layout_weight="80"
            android:inputType="textPassword"
            android:gravity="center"
            android:background="@drawable/edit_text" />


        <EditText
            android:id="@+id/password_2_registration_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/enter_2_password_registration_3"
            android:background="@drawable/edit_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:orientation="horizontal"
            android:contentDescription="registration button layout">

            <View
                android:layout_width="0dp"
                android:layout_weight="1000"
                android:layout_height="2dp" />

            <Button
                android:id="@+id/forgot_2_button"
                android:layout_width="0dp"
                android:layout_weight="3000"
                android:layout_height="match_parent"
                android:textColor="#fff"
                android:text="@string/confirm_reg_3"
                android:onClick="onClick"
                android:background="@drawable/button_red" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1000"
                android:layout_height="2dp" />
        </LinearLayout><!-- -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_height="match_parent"
        android:contentDescription="panel side padding" />
</LinearLayout>