<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/login_panel"
    android:contentDescription="panel for buttons and edittexts">

    <View
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_height="match_parent"
        android:contentDescription="panel side padding" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1400"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:contentDescription="actual layout  for buttons and edittexts"
        android:weightSum="305">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:text="@string/for_login"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="18sp"
            android:id="@+id/panel_title" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:hint="@string/your_phone_login"
            android:background="@drawable/edit_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/your_password"
            android:background="@drawable/edit_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:contentDescription="MIDDLE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:orientation="horizontal"
            android:contentDescription="loginbutton layout">

            <TextView
                android:id="@+id/forgot_string"
                android:layout_width="0dp"
                android:layout_weight="500"
                android:layout_height="match_parent"
                android:text="@string/forgot_password"
                android:onClick="onClick"
                android:clickable="true"
                android:textColor="#fff"
                android:textSize="16sp"
                android:gravity="center" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_weight="500"
                android:layout_height="match_parent"
                android:text="@string/enter"
                android:onClick="onClick"
                android:textColor="#fff"
                android:background="@drawable/button_red" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:contentDescription="donthaveaccount layout layout">

            <View
                android:layout_width="0dp"
                android:layout_weight="1000"
                android:background="#fff"
                android:layout_height="2dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3000"
                android:gravity="center"
                android:text="@string/yet_no_account"
                android:textSize="10sp"
                android:textColor="#fff"
                android:layout_height="match_parent" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1000"
                android:background="#fff"
                android:layout_gravity="center"
                android:layout_height="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:orientation="horizontal"
            android:contentDescription="registration button layout">

            <View
                android:layout_width="0dp"
                android:layout_weight="1000"
                android:layout_height="2dp" />

            <Button
                android:id="@+id/register_0_button"
                android:layout_width="0dp"
                android:layout_weight="3000"
                android:layout_height="match_parent"
                android:textColor="#fff"
                android:text="@string/registration"
                android:onClick="onClick"
                android:background="@drawable/button_sea" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1000"
                android:layout_height="2dp" />
        </LinearLayout><!-- -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_height="match_parent"
        android:contentDescription="panel side padding" />
</LinearLayout>