<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/login_panel"
    android:contentDescription="panel for buttons and edittexts">

    <View
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_height="match_parent"
        android:contentDescription="panel side padding" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1400"
        android:contentDescription="actual layout  for buttons and edittexts"
        android:orientation="vertical"
        android:weightSum="305">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:gravity="center"
            android:text="@string/congrats_reg_4"
            android:textColor="#fff"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:contentDescription="MIDDLE" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:gravity="center"
            android:text="@string/youre_signed_reg_4"
            android:textColor="#fff"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:contentDescription="MIDDLE" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:contentDescription="registration button layout"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="300" />

            <Button
                android:id="@+id/register_4_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4400"
                android:background="@drawable/button_red"
                android:onClick="onClick"
                android:text="@string/registration4"
                android:textColor="#fff" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="300" />
        </LinearLayout><!-- -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:contentDescription="MIDDLE" />

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_height="match_parent"
        android:contentDescription="panel side padding" />
</LinearLayout>